updated accord to assign1 requirements

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,9 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <p id="welcomeMessage" class="text-center mb-3"></p>
+      <div id="randomGif" class="text-center mb-3">
+        <img id="gifImage" src="" alt="Random GIF" class="img-fluid" style="max-width: 300px;">
+      </div>
       <!-- Create Post Section -->
       <section class="mb-4">
         <h2>Create Post</h2>
