--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
   </div>
 </main>
 <script type="module" src="/src/client.js"></script>
+<script type="module" src="/src/dashboard.js"></script>
 </body>
 </html>
